# rafty

./: .gitignore  .rustfmt.toml  Cargo.toml  Justfile  LICENSE-MIT  README.md
.github/workflows/: ci.yml
apps/kvdb/: Cargo.toml  README.md
apps/kvdb/src/: application.rs  command.rs  lib.rs  machine.rs  main.rs  query.rs  storage.rs  widgets.rs
apps/kvdb/tests/: election.rs  storage.rs
src/: application.rs  client.rs  command.rs  errors.rs  lib.rs  log.rs  machine.rs  peer.rs  prelude.rs  primitives.rs  query.rs  role.rs  snapshot.rs  storage.rs  transmit.rs
src/message/: append_entries_reply.rs  append_entries_request.rs  command_reply.rs  command_request.rs  mod.rs  query_reply.rs  query_request.rs  request_vote_reply.rs  request_vote_request.rs
utilities/debugger/: Cargo.toml  README.md
utilities/debugger/src/: debugger.rs  event.rs  lib.rs
utilities/debugger/src/widgets/: control.rs  info.rs  logs.rs  mod.rs  scroll.rs
utilities/simulator/: Cargo.toml  README.md
utilities/simulator/src/: action.rs  lib.rs  simulation.rs  update.rs
