[package]
name = "rafty-kvdb"
description = "A rafty key-value database application."
repository = "https://github.com/umut-sahin/rafty"
categories = ["database-implementations"]
keywords = ["rafty", "application", "kvdb"]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = [
    "Umut Şahin <umutsahin@protonmail.com>",
]

[dependencies]
anyhow = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
crossterm = { version = "0.29", optional = true }
derive_more = { version = "2.0", features = ["debug", "display", "error"] }
rafty = { path = "../.." }
rafty-debugger = { path = "../../utilities/debugger", optional = true }
rafty-simulator = { path = "../../utilities/simulator", optional = true }
ratatui = { version = "0.29", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
anyhow = { version = "1.0" }
derive_more = { version = "2.0", features = ["display", "error"] }
env_logger = { version = "0.11" }
rafty-simulator = { path = "../../utilities/simulator" }

[features]
default = ["cli"]
cli = ["anyhow", "clap", "crossterm", "rafty-debugger", "rafty-simulator", "ratatui", "serde_json"]

[lints]
workspace = true
