[package]
name = "rafty-debugger"
description = "A TUI debugger for rafty applications."
repository = "https://github.com/umut-sahin/rafty"
categories = ["command-line-utilities", "development-tools"]
keywords = ["rafty", "debugger"]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = [
    "Umut Şahin <umutsahin@protonmail.com>",
]

[dependencies]
anyhow = { version = "1.0" }
crossterm = { version = "0.29" }
log = { version = "0.4" }
rafty = { path = "../.." }
rafty-simulator = { path = "../simulator" }
ratatui = { version = "0.29" }
tui-logger = { version = "0.17" }

[lints]
workspace = true
