[package]
name = "rafty-simulator"
description = "A simulator for rafty applications."
repository = "https://github.com/umut-sahin/rafty"
categories = ["simulation"]
keywords = ["rafty", "simulation"]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = [
    "Umut Şahin <umutsahin@protonmail.com>",
]
